# liboscar

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  OsmKeyValueObjectStore.h  README.md
include/liboscar/: AdvancedCellOpTree.h  AdvancedOpTree.h  CQRFromComplexSpatialQuery.h  CQRFromPolygon.h  CQRFromRouting.h  CellDistanceByAnulus.h  CellDistanceBySphere.h  CellOpTree.h  GeoSearch.h  KVClustering.h  KVStats.h  KoMaClustering.h  OsmIdType.h  OsmKeyValueObjectStore.h  StaticOsmCompleter.h  StaticOsmItemSet.h  StaticTagStore.h  constants.h
src/: AdvancedCellOpTree.cpp  AdvancedOpTree.cpp  CQRFromComplexSpatialQuery.cpp  CQRFromPolygon.cpp  CQRFromRouting.cpp  CellDistanceByAnulus.cpp  CellDistanceBySphere.cpp  CellOpTree.cpp  GeoSearch.cpp  KVClustering.cpp  KVstats.cpp  KoMaClustering.cpp  OsmKeyValueObjectStore.cpp  SetOpTreePrivateGeo.cpp  StaticOsmCompleter.cpp  StaticTagStore.cpp  TextSearch.cpp  constants.cpp  tagcompleters.cpp
